--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,7 @@
 
   "name": "Superchillin Enhancement Suite",
   "description": "This extension helps keep track of Favorites and make life easier",
-  "version": "2.0.5",
+  "version": "2.2.8",
 
   "browser_action":{
 	"default_popup": "popup.html",
@@ -12,8 +12,9 @@
   "permissions": [
     "activeTab",
     "https://ajax.googleapis.com/",
-	"storage",
-	"downloads"
+    "https://app.imdb.com/",
+	  "storage",
+	  "downloads"
   ],
   "content_scripts": [
   {
@@ -21,7 +22,7 @@
       "http://superchillin.com/*", "http://superchillin.net/*", "https://superchillin.net/*", "https://superchillin.com/*"
     ],
     "js": ["jquery-2.2.0.min.js", "content.js" ],
-	"css": ["superStyle.css"]
+    "css": ["superStyle.css", "textSuperStyles.css", "AdvancedStyles.css"]
   }
 ]
 }
